# QuadradiusR

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile.bundle  LICENSE  Makefile  README.md  project.godot
.github/: CODEOWNERS
Server/: .dockerignore  .gitignore  Dockerfile  build_scripts.py  pyproject.toml  requirements.ci.txt  setup.cfg  setup.py  tox.ini
Server/docker/: entrypoint.sh
Server/src/quadradiusr_server/: __main__.py  auth.py  cli.py  config.py  constants.py  cron.py  game.py  game_state.py  gateway.py  lobby.py  logger.py  notification.py  qrws_connection.py  qrws_messages.py  server.py  utils.py
Server/src/quadradiusr_server/db/: access_token_repository.py  base.py  database_engine.py  game_invite_repository.py  game_repository.py  lobby_repository.py  repository.py  transactions.py  user_repository.py
Server/src/quadradiusr_server/powers/: __init__.py  power_raise_tile.py  randomizers.py
Server/tests/: test_auth.py  test_config.py  test_cron.py  test_database_engine.py  test_game.py  test_game_state.py  test_notification.py  test_static_files.py  test_utils.py
Server/tests/config/: config_01_pass.toml  config_02_fail.toml  config_05_pass.toml  config_06_pass.toml  config_07_fail.toml
Server/tests/db/: test_access_token.py  test_base.py  test_database_engine.py
Server/tests/e2e/: test_e2e_basic_game.py  test_e2e_game_invite_notification.py  test_e2e_lobby_join_notification.py  test_e2e_start_game.py
Server/tests/harness/: __init__.py
Server/tests/rest/: harness.py  test_auth.py  test_game.py  test_game_invite.py  test_gateway.py  test_health.py  test_lobby.py  test_power_definition.py  test_user.py
Server/tests/test_config/: config_03_fail.toml  config_04_fail.toml
Server/tests/ws/: test_ws_game.py  test_ws_gateway.py  test_ws_lobby.py
(+120 files in other folders)
