[build-system]
requires = [
    'setuptools>=42',
    'wheel',
    'setuptools_scm>=6.2',
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    'tests',
]
log_cli = true

[tool.poe.tasks]
pyinstaller = { script = "build_scripts:pyinstaller" }
