[metadata]
name = quadradiusr-server
version = 0.1.0
author = Contributors of QuadradiusR
description = The official server for QuadradiusR
url = https://github.com/Fruktus/QuadradiusR
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp >=3.6.0,<4
    toml >=0.10.0
    dacite >=1.6.0
    pyjwt >= 2.3.0
    SQLAlchemy >=1.4.0
    aiosqlite >= 0.17.0
    python-dateutil >=2.8.0

[options.extras_require]
test =
    pytest-xdist
    async-timeout >=4.0.0

[options.packages.find]
where = src
