[metadata]
name = quadradiusr-server
author = Contributors of QuadradiusR
description = The official server for QuadradiusR
url = https://github.com/Fruktus/QuadradiusR
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp ~=3.6
    toml ~=0.10.0
    dacite ~=1.6.0
    SQLAlchemy ~=1.4.0
    aiosqlite ~=0.17.0
    isodate ~=0.6.0
    jsondiff ~=1.3.0

[options.extras_require]
test =
    pytest ~=7.0
    pytest-xdist ~=2.5.0
    async-timeout ~=4.0.0

[options.packages.find]
where = src
